<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.example.main1.MainActivity" >

    <LinearLayout
        android:id="@+id/main_head"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/menu"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/menu"
            android:gravity="center"
            android:onClick="Menu"
            android:text="@string/menu" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/main_title"
            android:textColor="#000000"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/log"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login"
            android:gravity="center"
            android:onClick="Log" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Main_page"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:onClick="MainPage"
            android:text="@string/main_page"
            android:textColor="#000000" />

        <View
            android:layout_width="0.1dp"
            android:layout_height="30dp"
            android:background="@color/blue_dark" />

        <Button
            android:id="@+id/Recommend"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:onClick="Recommend"
            android:text="@string/recommend"
            android:textColor="#000000" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="30dp"
            android:background="@color/blue_dark" />

        <Button
            android:id="@+id/Shopping_Car"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:onClick="ShoppingCar"
            android:text="@string/shopping_car"
            android:textColor="#000000" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="30dp"
            android:background="@color/blue_dark" />

        <Button
            android:id="@+id/Personal_Center"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:onClick="PersonalCenter"
            android:text="@string/personal_center"
            android:textColor="#000000" />
    </LinearLayout>

</RelativeLayout>